[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym_service"
version = "0.1.0"
description = "A socket-based Gymnasium environment server/client package"
authors = [
    { name = "Lei Ouyang", email = "hitlearner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
